add phone number to main slider

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4423,6 +4423,11 @@
   .case-delivery.case-md {
     background-size: auto 180px;
   }
+  .slider-phone-xs {
+    display: flex;
+    margin: 0 auto 12px auto;
+    width: fit-content;
+  }
 }
 
 //additional media
