--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4428,6 +4428,9 @@
     margin: 0 auto 12px auto;
     width: fit-content;
   }
+  .auth-form .btn-primary {
+    width: 100%;
+  }
 }
 
 //additional media
