--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -448,6 +448,10 @@ ul {
   border: 2px solid #E9EEF4;
 }
 
+.form-group.danger {
+  border: 2px solid rgb(255, 0, 0);
+}
+
 .form-group.light {
   background: #fff;
   border-color: #fff;
@@ -646,7 +650,7 @@ ul {
   align-items: center;
   background: #fafafa;
   border-radius: 16px;
-  padding: 18px 24px;
+  padding: 15px 24px;
   min-height: 48px;
   margin-bottom: 24px;
   border: 2px solid #e9eef4;
