--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3556,6 +3556,7 @@ blockquote:before {
   display: flex;
   padding: 50px 95px 40px 64px;
   margin: 20px 0;
+  overflow: hidden;
 }
 
 .subscribe-demo-caption {
