--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -2449,7 +2449,7 @@
 }
 
 //phones
-@media (min-width: 320px) and (max-width: 575px) {
+@media (max-width: 575px) {
   .header-row {
     padding: 5px 0;
     min-height: 42px;
@@ -2817,6 +2817,7 @@
   .originality-img {
     width: 44px;
     height: 44px;
+    margin: 0;
   }
   .originality-img svg {
     width: 24px;
@@ -3267,7 +3268,8 @@
     margin-top: 8px;
   }
   .client-item-logo img {
-    max-width: 130px;
+    max-width: 45%;
+    height: auto;
   }
   .client-page .btn-text-border {
     display: flex;
