--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,8 @@
 header {
   background: #4E2970;
   z-index: 10;
+  position: sticky;
+  top: 0;
 }
 
 .header-row {
@@ -1013,13 +1015,13 @@ footer {
 .service-box {
   background: #FAFAFA;
   border-radius: 32px;
-  padding: 32px 80px 28px 52px;
+  padding: 32px 24px 28px 52px;
   display: flex;
   min-height: 500px;
 }
 
 .service-box-caption {
-  width: 47%;
+  width: 40.25%;
   padding-right: 50px;
 }
 
@@ -1089,7 +1091,7 @@ footer {
 }
 
 .service-box-img {
-  width: 53%;
+  width: 59.75%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -1100,11 +1102,19 @@ footer {
   background: #EFEFEF;
   border: 6px solid #DCDCDC;
   box-shadow: 0 4px 32px rgba(0, 0, 0, 0.08);
-  border-radius: 38px;
+  border-radius: 4px;
   width: 100%;
-  height: 250px;
-  max-width: 520px;
+  height: 300px;
+  max-width: 620px;
   overflow: hidden;
+}
+
+.analitycs .tablet {
+  height: 352px;
+}
+
+.sensus .tablet {
+  height: 320px;
 }
 
 .tablet img {
@@ -3628,7 +3638,7 @@ blockquote:before {
   border: 4px solid #DCDCDC;
   background: #EFEFEF;
   box-shadow: 0 4px 32px rgba(0, 0, 0, 0.08);
-  border-radius: 38px;
+  border-radius: 29px;
   display: flex;
   flex-direction: column;
   z-index: 2;
