--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3634,7 +3634,7 @@ blockquote:before {
   z-index: 2;
   width: 190px;
   flex-shrink: 0;
-  height: 410px;
+  height: 425px;
   border: 4px solid #DCDCDC;
   background: #EFEFEF;
   box-shadow: 0 4px 32px rgba(0, 0, 0, 0.08);
@@ -3696,7 +3696,7 @@ blockquote:before {
   flex: 1;
   width: 100%;
   overflow: hidden;
-  padding: 10px 2px 17px 2px;
+  padding: 10px 2px;
 }
 
 .phone-content img {
