--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -494,13 +494,13 @@ footer {
   right: 0;
   width: 78%;
   height: auto;
-  max-height: 100%;
+  max-height: calc(100vh - 64px);
 }
 
 .rocket-bg {
   width: 100%;
   height: auto;
-  max-height: 100%;
+  max-height: calc(100vh - 64px);
   position: relative;
 }
 
